@@ -1,4 +1,6 @@
 == org.nfunk.* =======================================================
+Feb 13 04 rjm - Added binom, conj functions.
+
 Dec 19 njf - figured out documentation linking issues. Leaving docs as they were
              before Nov 1 (no frames, javadoc at /doc/javadoc)
              
@@ -66,6 +68,11 @@ Oct  1 njf - removed org.lsmp.* from compile in build.xml
 Many previous changes not included here. See the documentation for details.
 
 == org.lsmp.* =======================================================
+
+Feb 13 04 rjm - added len() and size() functions
+		   - added Scaler.getInstance() and Vector.getInstance() methods.
+		   
+Dec 21 rjm - xjep.PrintVisitor can now work with three or more arguments to + and *.
 
 Dec 10 rjm - Implemented element by element multiplication in VectorJep
 			 nodeAccept method added to jep.EvaluationVisitor so that it
